API Documentation fix
